--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# Firebase json
+firebase.json
+
 
 
 # End of https://www.gitignore.io/api/node
