--- a/.gitignore
+++ b/.gitignore
@@ -63,10 +63,12 @@ typings/
 # dotenv environment variables file
 .env
 
-# Firebase json
+# Firebase
 firebase.json
 .firebaserc
 public/404.html
+database.rules.json
+build
 
 
 
