New hompage url

--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
   "bugs": {
     "url": "https://github.com/adigladi/weatherjukebox/issues"
   },
-  "homepage": "https://github.com/adigladi/weatherjukebox#readme"
+  "homepage": "./"
 }
